Fixing page-actions functionality and search bar visibility style

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/components/searchresult/clientlibs/site/css/searchresult.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/components/searchresult/clientlibs/site/css/searchresult.less
@@ -13,7 +13,7 @@
  *  See the License for the specific language governing permissions and
  *  limitations under the License.
  */
-@color-text-primary: #1a1a1a;
+@color-text-primary: #2c2c2c;
 @color-text-secondary: #505050;
 @color-text-meta: #8a8a8a;
 @color-border: #e1e1e1;
@@ -33,7 +33,7 @@
     line-height: 125%;
     letter-spacing: 0%;
     text-align: center;
-    color: @color-text-primary;
+    color: #2C2C2C;
     margin: 0 0 24px 0;
 }
 
